change verification parameter from query string to request body
