# src/config/swagger.yaml
@@ -446,7 +446,7 @@ paths:
         "500":
           description: Internal server error        
 
-  /api/verify/{param}:
+  /api/verify:
     post:
       summary: Verify a user
       description: This endpoint verifies a user based on a key passed in the query string.
@@ -483,45 +483,45 @@ paths:
                     type: string
                     example: Invalid verification key
 
-  paths:
-  /api/resetPassword:
-    put:
-      summary: Reset user password
-      tags:
-        - Authentication
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                param:
-                  type: string
-                  description: The recovery token
-                password:
-                  type: string
-                  description: The new password
-      responses:
-        "200":
-          description: Password reset successful
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-                    example: Password reset successful
-        "400":
-          description: Invalid token
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  error:
-                    type: string
-                    example: Invalid token
-        "500":
-          description: Internal server error
+  # paths:
+  # /api/resetPassword:
+  #   put:
+  #     summary: Reset user password
+  #     tags:
+  #       - Authentication
+  #     requestBody:
+  #       required: true
+  #       content:
+  #         application/json:
+  #           schema:
+  #             type: object
+  #             properties:
+  #               param:
+  #                 type: string
+  #                 description: The recovery token
+  #               password:
+  #                 type: string
+  #                 description: The new password
+  #     responses:
+  #       "200":
+  #         description: Password reset successful
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: object
+  #               properties:
+  #                 message:
+  #                   type: string
+  #                   example: Password reset successful
+  #       "400":
+  #         description: Invalid token
+  #         content:
+  #           application/json:
+  #             schema:
+  #               type: object
+  #               properties:
+  #                 error:
+  #                   type: string
+  #                   example: Invalid token
+  #       "500":
+  #         description: Internal server error
